# python_2025_course

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
example2/: pyvenv.cfg
example_venv/: pyvenv.cfg
week01/: 2pointers.py  add_request.py  file_operations.py  hello_world.py  lec.py  pip_poetry.md
week02/: pool.py
